added style,url and updated content for about_us

--- a/server/frontend/static/About.html
+++ b/server/frontend/static/About.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-  <!-- Link the style sheet here -->
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/bootstrap.min.css">
 </head>
 <div>
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:darkturquoise; height: 1in;">
@@ -27,36 +28,37 @@
   
     <div class="card" style="width: 80%;margin: auto; margin-top:5%;">
       <div class="banner" name="about-header">
-      <!-- Insert header information here -->
+        <h1>About Us</h1>
+        Buckle up! At Best Cars Dealership, we don’t just sell cars — we match people with their destiny (on four wheels). From muscle to luxury, imports to “it still runs, somehow” classics — if it drives, we’ve probably got it. And at prices that won’t make your wallet cry.
       </div>
       <div style="display: flex;flex-direction: row; margin:auto">
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/Actor-Steven-Seagal.jpg" alt="Steve looking mysterious">
         <div class="card-body">
-          <p class="title">Person1</p>
-          <p>Person1 Title</p>
-          <p class="card-text">Some text that explains the person1 in about 2 short sentences</p>
-          <p>person1@example.com</p>
+          <p class="title">Steve "The Negotiator"</p>
+          <p>Lead Test Driver / Chief Coffee Consumer</p>
+          <p class="card-text">Steve once sold a car to someone who just came in for directions. Rumor has it he can hear engine problems in his sleep. </p>
+          <p>steve@superwheels.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/keanu-reeves-john-wick.jpg" alt="Keanu looking intense">
         <div class="card-body">
-          <p class="title">Person2</p>
-          <p>Person2 Title</p>
-          <p class="card-text">Some text that explains the person2 in about 2 short sentences</p>
-          <p>person2@example.com</p>
+          <p class="title">Keanu "The Wheelman"</p>
+          <p>Head of Speed & Zen Vibes</p>
+          <p class="card-text">Keanu doesn’t sell cars — he liberates them. He once parallel parked with his eyes closed and called it “meditation.” </p>
+          <p>keanu@superwheels.com</p>
         </div>
       </div>
 
       <div class="card" style="width: 30%;">
-        <img class="card-img-top" src="/static/person.png" alt="Card image">
+        <img class="card-img-top" src="/static/lionsgate-dates-jason-statham.jpg" alt="Jason being unreasonably cool">
         <div class="card-body">
-          <p class="title">Person3</p>
-          <p>Person3 Title</p>
-          <p class="card-text">Some text that explains the person3 in about 2 short sentences</p>
-          <p>person3@example.com</p>
+          <p class="title">Json "Torque Master"</p>
+          <p>Head of Tactical Sales & Burnouts</p>
+          <p class="card-text">Jason doesn’t do test drives — he does test missions. Known to sell a truck while jumping another truck. Absolutely refuses to use blinkers.</p>
+          <p>jason@superwheels.com</p>
         </div>
       </div>
     </div>
